[package]
authors.workspace = true
edition = "2021"
name = "iroh"
version = "0.1.0"

[dependencies]
anyhow = "1.0.80"
axum = { version = "0.7.4", features = ["macros"] }
futures = "0.3.30"
iroh = { version = "0.12.0", default-features = false, features = ["flat-db"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = "1.36.0"
tokio-util = "0.7"
